[project]
name = "delay"
description = "Simple custom node for ComfyUI to artificially delay a workflow at any point."
version = "1.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/a-und-b/ComfyUI_Delay"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "a-und-b"
DisplayName = "ComfyUI_Delay"
Icon = ""
